Fixed text-align

--- a/styles.css
+++ b/styles.css
@@ -4,10 +4,7 @@ div {
     background-color: red;
     color: white;
     font-size: 32px;
-    align-self: center;
+    text-align: center;
     font-weight: bold;
 }
 
-p {
-color:blue;
-}
